# image-processor

./: CMakeLists.txt  image_processor.cpp  image_processor.h  readme.md  test.cpp
filters/: Filter.cpp  Filter.h
image/: Color.cpp  Image.cpp  Image.h
parse/: Parser.cpp  Parser.h
read_and_write/: Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h
